// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "http://<api-host>:<api-port>/auth",
      Object {
        "credentials": "include",
        "method": "DELETE",
      },
    ],
    "context": null,
    "fn": [Function],
  },
}
`;

exports[` 2`] = `
Object {
  "@@redux-saga/IO": true,
  "CALL": Object {
    "args": Array [
      "http://<api-host>:<api-port>/user/current",
    ],
    "context": null,
    "fn": [Function],
  },
}
`;
